# overabundance

./: OBJECTIVE.md  README.md  excel_to_tsv_with_bold_xml.py  flexemes.tsv  flexemes_combined_11.25.2025.xlsx  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: index.html
scripts/: generate_html_indexes.py
